# FastMatMul

./: .gitignore  CMakeLists.txt  README.md  repomix-output.txt  run_bench.sh  run_tests.sh
src/: CMakeLists.txt  algo.h  algo_block.cpp  algo_block.h  algo_naive.cpp  algo_naive.h  algo_stothers.cpp  algo_stothers.h  algo_strassen.cpp  algo_strassen.h  algo_winograd.cpp  algo_winograd.h  main.cpp  matmul.cpp  matmul.h  matrix.cpp  matrix.h  strassen.cpp
tests/: CMakeLists.txt  test_matmul.cpp
